# web-client

./: .gitignore  LICENSE  README.md  build.yml  build_package.py  get_version.py  makefile  package-lock.json  package.json  pyproject.toml  tsconfig.json
modular_server_manager_web_client/: http_server.py
modular_server_manager_web_client/client/assets/: app.js
modular_server_manager_web_client/client/assets/css/: main.css
src/: index.html  main.ts
src/modular_server_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: app.ts  cookie.ts  types.ts
src/server/: __init__.py  compatibility.json  http_server.py  utils.py  web_server.py  websocket_server.py
src/styles/: main.scss
src/web/: main.ts
src/web/scripts/: api.ts
web_server/: http_server.py  web_server.py  websocket_server.py
