[project]
name = "modular-server-manager-web-client"
version = "0.1.0"
description = "MSM Web Client"
authors = [
    { name = "Antoine BUIREY", email = "antoine.buirey@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.1",
    "gamuLogger>=3.2.4",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "typing_extensions==4.13.2",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "dnspython==2.7.0",
    "eventlet==0.40.3",
    "greenlet==3.2.1",
    "python-socketio==5.14.0",
    "http_code @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/http_code-1.1.6-py3-none-any.whl",
    "singleton @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/singleton-1.1.6-py3-none-any.whl",
    "version @ https://github.com/T0ine34/python-sample/releases/download/1.1.6/version-1.1.6-py3-none-any.whl",
    "modular-server-manager @ https://github.com/modular-server-manager/server/releases/download/0.1.4/modular_server_manager-0.1.4-py3-none-any.whl"
]

[tool.setuptools]
packages = ["modular_server_manager_web_client"]
